Fix the behavior of sortable widgets in search. - In opus.css (line 1587), add overflow-x: auto !important; to make sure   ps will scroll when user drags a widget to move around. - In widgets.js (line 57-73), add start and sort event handlers for sortable   widgets. Use the max scrollable height to prevent continuous down   scrolling when user keeps dragging the item down after scrollbar reaches   to the bottom-end.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1584,6 +1584,7 @@ panel are properly separated */
 
 /* This is to make sortable scrolling (when sorting happened) works with ps */
 #widget-container {
+    overflow-x: auto !important;
     overflow-y: hidden !important;
     overscroll-behavior: contain;
 }
